Revision history for activitymail.
1.25
       - The URL specified by the -w option is no longer URL-encoded. Only the
         associated parameters in the GET string are. Reported by Kris Jurka.

1.24   2006-04-04T00:30:23
       - Removed ".diff" from diff URLs, since it doesn't seem to be required
         by CVSWeb and broke ViewVC. Reported by George Pavlov.
       - Added calls to uri_escape() to properly escape URLs. Reported by
         George Pavlov.
       - Added single quotes around "%{sVv}" in all the examples of the
         comamnd-line, as it seems that some shells have a hard time
         recognizing "%{sVv}" as an argument rather than something else.
         reported by Dave Thorn.
       - Added -C option to specify a character set for use in Content-Type
         headers. Suggested by Antoine Pitrou.

1.23   2005-12-09T19:41:23
       - Various spelling corrections from Gavin Shelley.
       - Added note about incompatibility of diff on SunOS 5.9. Reported by
         Gavin Shelley.
       - Fixed CVS 1.12 command-line parsing to support the "NONE" string for
         added or deleted version numbers. Based on a patch from Remi Richard.

1.22   2005-10-04T16:57:08
       - Fixed typo spotted by Matthew Doar.
       - Fixed HTML mode so that HTML is escaped when it is inserted into the
         email (as opposed to when it is attached). reported by James B.
       - Added -P to support the new CVS 1.12 %p argument. Based on a patch
         from Remi Ricard.
       - Added the -U argument to replace spaces with underscores in file
         names before handing them off to 'diff'. Such was always done in
         earlier versions, but newer versions of CVS don't need it, so -U has
         been added for the benefit of users of older versions of CVS.

1.21   2005-02-11T02:13:00
       - Updated contact and bug reporting information.

1.20   2005-02-11T02:02:40
       - Fix for missing module name due to the way Eclipse 3.0 defines