@@ -1,12 +1,13 @@
 use Module::Build;
 
-my $build = Module::Build->new
-  ( module_name        => 'activitymail',
+my $build = Module::Build->new(
+    module_name        => 'activitymail',
     license            => 'perl',
     create_makefile_pl => 'passthrough',
     script_files       => [ 'bin/activitymail' ],
     dist_version_from  => 'bin/activitymail',
     pm_files           => {},
+    configure_requires => { 'Module::Build' => '0.2701' },
     requires           => {
         Getopt::Std    => 0,
         File::Basename => 0,
